--- a/docker/app/gpt-api/application-docker.yml
+++ b/docker/app/gpt-api/application-docker.yml
@@ -3,9 +3,11 @@ server:
 
 spring:
   application:
-    name: gpt_api_server
+    name: gpt-api-server
 
   gpt:
     service:
       # 配置代理地址
       proxy-address: 192.168.2.9
+      # 配置 apikey (此 key 不可用)
+      api-key: sk-LQz9IvI5tK9g9dvdDHMZT3BlbkFJb9p0mKOe8eBUrRUdN8789
